--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,99 @@ body
     background-color: #575757; 
     color: rgb(133, 227, 131);
 }
+
+.card
+{
+    width: 90%;
+    max-width: 400px;
+    color: #fff;
+    background: linear-gradient(to bottom, rgb(24, 222, 107), rgb(141, 246, 3));
+    margin: 100px auto 0;
+    border-radius: 20px;
+    padding: 40px 35px;
+    text-align: center;
+}
+.search{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+.search input{
+    border:0;
+    outline: 0;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
+}
+.search button
+{
+    border:0;
+    outline: 0;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+}
+.search button img
+{
+    width: 26px;
+}
+
+.weather-icon
+{
+    width: 170px;
+    margin-top: 20px;
+}
+
+.weather
+{
+    font-size: 20px;
+    font-weight: 500;
+    display: none;
+}
+
+.weather h2
+{
+    font-size: 25px;
+    font-weight: 400;
+    margin-top: -30px;
+}
+.details
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 60px;
+}
+.col
+{
+    display: flex;
+    align-items: center;
+    text-align:left; 
+}
+.col img
+{
+    width: 65px;
+    margin-right: 10px;
+
+}
+.humidity, .wind
+{
+    font-size: 25px;
+    margin-top: 6px;
+}
+.error
+{
+    text-align: left;
+    margin-left:10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
+}
