--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url(tractor.jpg);
+    background-image: url(background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,18 +12,28 @@ body
     background-color: #000000;
     overflow: hidden;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+   
 }
 .navbar a{
     display: block;
-    color: white;
+    color: rgb(243, 237, 237);
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
 }
 .navbar a:hover {
-    background-color: #575757; 
-    color: rgb(133, 227, 131);
+    background-color: #ffffff; 
+    color: #424242;
+    transition: background-color 0.3s ease, color 0.3s ease; 
+    
+}
+.title
+{
+    text-align: center;
+    justify-content: center;
+    color: #ffffff;
 }
 
 .card
