--- a/components/Login.html
+++ b/components/Login.html
@@ -4,12 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login & Sign Up</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="login.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <div class="navbar">
+    
+      <a href ="index.html">Home</a>
+      <a href ="./components/About.html">About</a>
+      <a href ="./components/Service.html">Service</a>
+      <a href ="./components/Store.html">Store</a>
+      <a href ="./components/Login.html">Login</a>  
+    </div>
+  </header>
   <div class="container">
-    <!-- Login Form -->
+   
     <div class="form-container login-form">
       <h2>Login</h2>
       <form>
