--- a/components/login.css
+++ b/components/login.css
@@ -1,4 +1,34 @@
-/* General Styles */
+body
+{
+    background-image: url(background.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
+}
+.navbar
+{
+    background-color: #000000;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+   
+}
+.navbar a{
+    display: block;
+    color: rgb(243, 237, 237);
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+.navbar a:hover {
+    background-color: #ffffff; 
+    color: #424242;
+    transition: background-color 0.3s ease, color 0.3s ease; 
+    
+}
 * {
     margin: 0;
     padding: 0;
