--- a/components/Login.html
+++ b/components/Login.html
@@ -8,40 +8,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+<header>
     <div class="navbar">
-    
-      <a href ="index.html">Home</a>
-      <a href ="./components/About.html">About</a>
-      <a href ="./components/Service.html">Service</a>
-      <a href ="./components/Store.html">Store</a>
-      <a href ="./components/Login.html">Login</a>  
+      <a href ="../index.html">Home</a>
+      <a href ="About.html">About</a>
+      <a href ="Service.html">Service</a>
+      <a href ="Store.html">Store</a>
+      <a href ="Login.html">Login</a>  
     </div>
   </header>
-  <div class="container">
-   
-    <div class="form-container login-form">
-      <h2>Login</h2>
-      <form>
-        <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
-      <p>Not a user? <a href="#" class="toggle-form">Sign Up</a></p>
-    </div>
 
-    <!-- Sign Up Form -->
-    <div class="form-container signup-form">
-      <h2>Sign Up</h2>
-      <form>
-        <input type="text" placeholder="Full Name" required>
-        <input type="email" placeholder="Email" required>
-        <input type="tel" placeholder="Phone Number" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Sign Up</button>
-      </form>
-      <p>Already a user? <a href="#" class="toggle-form">Login</a></p>
-    </div>
-  </div>
 </body>
 </html>
