--- a/components/about.css
+++ b/components/about.css
@@ -31,7 +31,7 @@ body
 }
 .titlecard
 {
-    background-color: rgb(244, 139, 10) ;
+    background-color: rgba(255, 178, 34, 0.5);
     margin: 20px;
     padding: 30px;
     border-radius: 20px;
