--- a/styles.css
+++ b/styles.css
@@ -143,25 +143,51 @@ body
 }
 .smart-farm
 {
-    background-color: #a2f3a7;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
     padding: 30px;
     border-radius: 20px;
     display: block ;
-    margin: 100px 30px;
+    margin: 80px 30px;
+    width: 800px;
+    height: 600px;
+    align-items: center;
+    position: relative;
 }
 .smart-farm .title1
 {
-    align-items: center;
+    text-transform: capitalize;
+    text-decoration: solid;
+    text-align: center;
     justify-content: center;
     font-family: Helvetica ,Arial, sans-serif; 
     display: contents;
     font: 24px;
-    margin: 20px 0px;
+    margin: auto;
     display: block;
+    color: #fff;
 }
 .smart-farm .text-contents
 {
-    display: flex;
-    text-align: left;
+    display: block;
+    text-align: center;
     justify-content: center;
+    color: #fff;
 }
+.iot_device img {
+    width: 700px;    
+    height: 400px;     
+    border-radius: 10px;  
+    display: block;   
+    margin: 0 auto;   
+  }
+  section
+  {
+    margin: 0;
+    padding: 0;
+  }
+  div {
+    margin: 0;
+    padding: 0;
+  }
+  
