--- a/components/Service.html
+++ b/components/Service.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
+    <link rel="stylesheet" href="Service.css">
+    <link rel="script" href="scripts.js">
 </head>
 <body>
+    <header>
+        <div class="navbar">
+          <a href ="../index.html">Home</a>
+          <a href ="About.html">About</a>
+          <a href ="Service.html">Service</a>
+          <a href ="Store.html">Store</a>
+          <a href ="Login.html">Login</a>  
+        </div>
+      </header>
+      <div class="weather-forecast">
+        <h2> Weather-Forecast</h2>
+    </div>
+    <div class="card">
+        <div class="search">
+          <input type="text" placeholder="Enter city name to check weather" spellcheck="false">
+          <button>
+            <img src="../assets/search.png">
+          </button>
+        </div>
+        <div class="error">
+          <p>Invalid city name</p>
+        </div>
+        <div class="weather">
+          <img src="../assets/rain.png" class="weather-icon">
+          <h1 class="temp">22°C</h1>
+          <h2 class="city">Punjab</h2>
+          <div class="details">
+            <div class="col">
+              <img src="../assets/humidity.png">
+              <div>
+                <p class="humidity">50%</p>
+                <p>humidity</p>
+              </div>
+            </div>
     
+            <div class="col">
+              <img src="../assets/wind.png">
+              <div>
+                <p class="wind">50 km/h</p>
+                <p>Wind Speed</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="scripts.js"></script>
 </body>
 </html>
