--- a/components/about.css
+++ b/components/about.css
@@ -31,7 +31,7 @@ body
 }
 .titlecard
 {
-    background-color: rgba(255, 178, 34, 0.5);
+    background-color: rgba(107, 106, 104, 0.5);
     margin: 20px;
     padding: 30px;
     border-radius: 20px;
@@ -51,4 +51,5 @@ body
     font-style: oblique;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
+    text-decoration: solid;
 }
