--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@ body
     background-repeat: no-repeat;
     height: 100vh;
     margin: 0;
+    
+    
+}
+* {
+    margin: 0;
+    padding: 0;
+    
 }
 .navbar
 {
@@ -35,16 +42,20 @@ body
     justify-content: center;
     color: #ffffff;
 }
-
+.container0
+{
+    padding: 100px;
+    
+}
 .card
 {
     width: 90%;
     max-width: 400px;
     color: #fff;
     background: linear-gradient(to bottom, rgb(24, 222, 107), rgb(141, 246, 3));
-    margin: 100px auto 0;
+    margin: 10px auto 0;
     border-radius: 20px;
-    padding: 40px 35px;
+    padding: 40px 45px;
     text-align: center;
 }
 .search{
@@ -96,7 +107,7 @@ body
 {
     font-size: 25px;
     font-weight: 400;
-    margin-top: -30px;
+    margin-top: -60px;
 }
 .details
 {
@@ -182,13 +193,35 @@ body
     display: block;   
     margin: 0 auto;   
   }
-  section
-  {
+.button
+{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+.IOT{
+    background-color: #27d300; 
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    border-radius: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    
+}
+
+.IOT:hover {
+    background-color: #2dc210;
+    transform: scale(1.1); 
+}
+ .ai-advice
+ {
+    background-color: #b82424;
     margin: 0;
-    padding: 0;
-  }
-  div {
-    margin: 0;
-    padding: 0;
-  }
+    padding: 40px;
+
+ }
   
