--- a/components/Service.css
+++ b/components/Service.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url(../background2.jpg);
+    background-image: url(../assets/background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
