--- a/components/Service.html
+++ b/components/Service.html
@@ -17,6 +17,7 @@
           <a href ="Login.html">Login</a>  
         </div>
       </header>
+      <section>
       <div class="weather-forecast">
         <h2> Weather-Forecast</h2>
     </div>
@@ -53,6 +54,38 @@
           </div>
         </div>
       </div>
+    </section>
+    <section>
+   <div class="insurance">
+    <div class="card1">
+    <div class="farmers-insurance">
+      <div class="title">
+      <h2>Farmers-Insurance</h2>
+      </div>
+      <div class="contents">
+      <h2>🌾 Why Add Farmer’s Insurance?</h2>
+      <p>Because farming is risky — droughts, pests, floods, etc</p>
+      <li>Protect farmers from crop failure losses</li>
+      <li>Encourage adoption of new tech with safety nets</li>
+      <li>Build trust and long-term sustainability</li>
+      </div>
+      <button class="insurance-button">Register Now </button>
+    </div>
+   </div> 
+   <div class="card2">
+    <div class="title">
+      <h2>Crop-Insurance</h2>
+      </div>
+      <div class="contents">
+      <h2>🌾 Crop Insurance: Protecting Your Harvest, Securing Your Future</h2>
+      <p>Crop insurance is a safety net for farmers that helps protect against the loss of crops due to natural disasters like droughts, floods, hailstorms, pests, or unexpected market fluctuations</p>
+      <li>Shields farmers from financial risk</li>
+      <li>Stabilizes income during poor harvest seasons</li>
+      <li>Supports long-term agricultural sustainability</li>
+      </div>
+      <button class="insurance-button">Register Now </button>
+    </div>
+   </div>
     </section>
     <script src="scripts.js"></script>
 </body>
