--- a/components/about.css
+++ b/components/about.css
@@ -6,6 +6,7 @@ body
     background-repeat: no-repeat;
     height: 100vh;
     margin: 0;
+    font-family: poppins;
 }
 .navbar
 {
@@ -13,7 +14,7 @@ body
     overflow: hidden;
     display: flex;
     justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: poppins;
    
 }
 .navbar a{
@@ -31,7 +32,7 @@ body
 }
 .titlecard
 {
-    background-color: rgba(107, 106, 104, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     margin: 20px;
     padding: 30px;
     border-radius: 20px;
@@ -39,8 +40,7 @@ body
 .titlecard h2{
     text-align: center;
     color: #ffffff;
-    font-style: oblique;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: poppins;
     font-weight: 100;
 }
 
@@ -48,8 +48,7 @@ body
     display: contents;
     justify-content: center;
     color: #ffffff;
-    font-style: oblique;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: poppins;
     font-weight: 100;
     text-decoration: solid;
 }
