--- a/components/Service.html
+++ b/components/Service.html
@@ -17,7 +17,7 @@
           <a href ="Login.html">Login</a>  
         </div>
       </header>
-      <section>
+      <section class="sec1">
       <div class="weather-forecast">
         <h2> Weather-Forecast</h2>
     </div>
@@ -55,13 +55,17 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="sec2">
    <div class="insurance">
     <div class="card1">
     <div class="farmers-insurance">
+      <div class="insurance-img1">
+        <img src="../assets/insurance1.svg">
+      </div>
       <div class="title">
       <h2>Farmers-Insurance</h2>
       </div>
+      
       <div class="contents">
       <h2>🌾 Why Add Farmer’s Insurance?</h2>
       <p>Because farming is risky — droughts, pests, floods, etc</p>
@@ -73,6 +77,10 @@
     </div>
    </div> 
    <div class="card2">
+    <div class="crop-insurance">
+      <div class="insurance-img2">
+        <img src="../assets/insurance2.svg">
+      </div>
     <div class="title">
       <h2>Crop-Insurance</h2>
       </div>
@@ -87,6 +95,21 @@
     </div>
    </div>
     </section>
+  <section class="sec3">
+    <div class="rent-equipment">
+      <div class="title">
+        <h2>Equipment Rental Marketplace</h2>
+      </div>
+      <div class="tractors">
+        <div class="card1">
+          <div class="tractor-img">
+        <img src ="../assets/equipments/tractor.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </section>
     <script src="scripts.js"></script>
 </body>
 </html>
