--- a/components/Service.html
+++ b/components/Service.html
@@ -100,13 +100,27 @@
       <div class="title">
         <h2>Equipment Rental Marketplace</h2>
       </div>
+      <div class="card1">
       <div class="tractors">
-        <div class="card1">
           <div class="tractor-img">
         <img src ="../assets/equipments/tractor.jpg">
           </div>
         </div>
       </div>
+      <div class="Combine-Harvester">
+        <div class="card2">
+          <div class="Combine-Harvester-img">
+        <img src ="../assets/equipments/combine harverster.jpg">
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
     </div>
     
   </section>
