--- a/components/Store.html
+++ b/components/Store.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./store.css">
+    <title>Store</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <a href ="../index.html">Home</a>
+        <a href ="About.html">About</a>
+        <a href ="Service.html">Service</a>
+        <a href ="Store.html">Store</a>
+        <a href ="Login.html">Login</a>  
+      </div>
 </body>
 </html>
