update service page

--- a/components/Service.html
+++ b/components/Service.html
@@ -57,7 +57,7 @@
     </section>
     <section class="sec2">
    <div class="insurance">
-    <div class="card1">
+    <div class="card2">
     <div class="farmers-insurance">
       <div class="insurance-img1">
         <img src="../assets/insurance1.svg">
@@ -94,27 +94,30 @@
       <button class="insurance-button">Register Now </button>
     </div>
    </div>
+   <div class="card2">
+    <div class="crop-insurance">
+      <div class="insurance-img2">
+        <img src="../assets/insurance.jpg">
+      </div>
+    <div class="title">
+      <h2>Equipment-Insurance</h2>
+      </div>
+      <div class="contents">
+      <h2>🚜 Farm Equipment Protection Plan</h2>
+      <p>Ensure your tools of trade stay secure. This insurance covers loss or damage to your essential farming machinery.</p>
+      <li>All risk coverage: fire , mechanical breakdown</li>
+      <li>24/7 claim support and on-site inspection</li>
+      <li>Flexible plans based on equipment age and usage</li>
+      </div>
+      <button class="insurance-button">Register Now </button>
+    </div>
+   </div>
     </section>
   <section class="sec3">
     <div class="rent-equipment">
       <div class="title">
         <h2>Equipment Rental Marketplace</h2>
       </div>
-      <div class="card1">
-      <div class="tractors">
-          <div class="tractor-img">
-        <img src ="../assets/equipments/tractor.jpg">
-          </div>
-        </div>
-      </div>
-      <div class="Combine-Harvester">
-        <div class="card2">
-          <div class="Combine-Harvester-img">
-        <img src ="../assets/equipments/combine harverster.jpg">
-          </div>
-        </div>
-      </div>
-
 
 
 
