--- a/components/Login.html
+++ b/components/Login.html
@@ -17,6 +17,23 @@
       <a href ="Login.html">Login</a>  
     </div>
   </header>
-
+<section class="sec1">
+<div class="wrapper">
+  <form action="">
+  <h1>Log In</h1>
+  <div class="input-box">
+    <input type="text" placeholder="username" required>
+  </div>
+  <div class="input-box">
+    <input type="password" placeholder="password" required>
+  </div>
+  <div class="remember-forgot">
+    <label> <input type="checkbox"> Remember Me </label>
+    <a href="$">Forgot password</a>
+  </div>
+  <button type="submit" class="btn"> Login </button>
+</form>
+</div>
+</section>
 </body>
 </html>
