--- a/components/Service.html
+++ b/components/Service.html
@@ -118,7 +118,46 @@
       <div class="title">
         <h2>Equipment Rental Marketplace</h2>
       </div>
+      <div class="cards">
+        <div class="c1">
+          <img src="../assets/equipments/tractor.jpg">
+          <h2>Tractors</h2>
+          <p>Rent at lowest rates</p>
+          <button class="btn">Rent</button>
+        </div>
+        <div class="c1">
+          <img src="../assets/equipments/seed-drills.jpg">
+          <h2>Seed-Drills</h2>
+          <p>Better Seed-Drilling</p>
+          <button class="btn">Rent</button>
+        </div>
+        <div class="c1">
+          <img src="../assets/equipments/combine-harvester-machine.jpg">
+          <h2>Combine Harvester</h2>
+          <p>Newly equipped machines</p>
+          <button class="btn">Rent</button>
+        </div>
+        <div class="c1">
+          <img src="../assets/equipments/Cultivators.jpg">
+          <h2>Cultivators</h2>
+          <p>Discount on Cultivators </p>
+          <button class="btn">Rent</button>
+        </div>
+        <div class="c1">
+          <img src="../assets/equipments/movers.jpg">
+          <h2>Movers</h2>
+          <p>Rent at lowest rates</p>
+          <button class="btn">Rent</button>
+        </div>
+        <div class="c1">
+          <img src="../assets/equipments/sprayers.png">
+          <h2>Sprayers</h2>
+          <p>Rent at lowest rates</p>
+          <button class="btn">Rent</button>
+        </div>
 
+
+      </div>
 
 
 
