--- a/components/Service.html
+++ b/components/Service.html
@@ -155,17 +155,38 @@
           <p>Rent at lowest rates</p>
           <button class="btn">Rent</button>
         </div>
-
-
       </div>
-
-
-
-
-
     </div>
-    
   </section>
+  
+  <section class="sec4">
+    <div class="Agromists&Veterinarians">
+      <div class="title">
+        <h2>Expert consultation on Agronomists and Veterinarians </h2>
+      </div>
+      <div class="contents1">
+        <h2>🌾 Who are Agronomists?</h2>
+        <p>Agronomists agricultural experts who study how to grow crops efficiently and sustainably.</p>
+        <p>🔍 What Do Agronomists Do?</p>
+        <li>E📊 Research: Study plants, soil, weather, and farming systems.</li>
+        <li>Guidance on sustainable farming practices</li>
+        <li>Access to the latest agricultural research and technology</li>
+      </div>
+      <div class="contents2">
+        <h2>🌾 Why Consult a Veterinarian?</h2>
+        <p>Because farming is risky — droughts, pests, floods, etc</p>
+        <li>Expertise in animal health and welfare</li>
+        <li>Guidance on disease prevention and treatment</li>
+        <li>Access to the latest veterinary research and technology</li>
+      </div>
+      <div class="cards">
+        <div class="c1">
+          <img src="../assets/equipments/tractor.jpg">
+          <h2>Agromists</h2>
+          <p>Rent at lowest rates</p>
+          <button class="btn">Rent</button>
+        </div>
+      </section>  
     <script src="scripts.js"></script>
 </body>
 </html>
