--- a/components/Service.html
+++ b/components/Service.html
@@ -160,15 +160,16 @@
   </section>
   
   <section class="sec4">
-    <div class="Agromists&Veterinarians">
-      <div class="title">
-        <h2>Expert consultation on Agronomists and Veterinarians </h2>
-      </div>
+    <div class="title">
+      <h2>Expert consultation on Agronomists and Veterinarians </h2>
+    </div>
+    <div class="Agromists-Veterinarians">
+      
       <div class="contents1">
         <h2>🌾 Who are Agronomists?</h2>
         <p>Agronomists agricultural experts who study how to grow crops efficiently and sustainably.</p>
         <p>🔍 What Do Agronomists Do?</p>
-        <li>E📊 Research: Study plants, soil, weather, and farming systems.</li>
+        <li>Research: Study plants, soil, weather, and farming systems.</li>
         <li>Guidance on sustainable farming practices</li>
         <li>Access to the latest agricultural research and technology</li>
       </div>
@@ -181,10 +182,17 @@
       </div>
       <div class="cards">
         <div class="c1">
-          <img src="../assets/equipments/tractor.jpg">
-          <h2>Agromists</h2>
-          <p>Rent at lowest rates</p>
-          <button class="btn">Rent</button>
+          <img src="../assets/ppl1.jpg">
+          <h2>Ben Paul</h2>
+          <p>Agromists</p>
+          <button class="btn">Book now</button>
+        </div>
+        <div class="c1">
+          <img src="../assets/ppl2.jpg">
+          <h2>Dr Chismillin</h2>
+          <p>Veterinarian</p>
+          <button class="btn">Book now</button>
+        </div>
         </div>
       </section>  
     <script src="scripts.js"></script>
