--- a/components/Store.html
+++ b/components/Store.html
@@ -14,5 +14,58 @@
         <a href ="Store.html">Store</a>
         <a href ="Login.html">Login</a>  
       </div>
+
+    <div class="sec1">
+      <div class="title">
+        <h1>Seeds</h1>
+      </div>
+        <div class="seed">    
+        <div class="cards">
+        <div class="c1">
+          <img src="../assets/store/rice-seeds.png">
+          <h2>Paddy (Grade A) </h2>
+          <p class="price">₹2,300 /quintal </p>
+          <button class="btn">Buy</button>
+        </div>
+        </div>
+          <div class="cards">
+                <div class="c1">
+                  <img src="../assets/store/ragi-seeds.jpg">
+                  <h2>Ragi</h2>
+                  <p class="price">₹4,290 /quintal</p>
+                  <button class="btn">Buy</button>
+                </div>
+            </div>
+          <div class="cards">
+              <div class="c1">
+                <img src="../assets/store/wheat-seeds.jpg">
+                <h2>Wheat</h2>
+                <p class="price">₹2,425 /quintal</p>
+                <button class="btn">Buy</button>
+              </div>
+          </div>
+          <div class="cards">
+            <div class="c1">
+              <img src="../assets/store/barley-seeds.jpg">
+              <h2>Barley</h2>
+              <p class="price">₹1,980 /quintal</p>
+              <button class="btn">Buy</button>
+            </div>
+        </div>
+        </div>
+        </div>
+     <div class="sec2">
+      <div class="title">
+        <h1>Fertilizers</h1>
+      </div>
+      <div class="cards">
+        <div class="c1">
+          <img src="../assets/store/barley-seeds.jpg">
+          <h2>Barley</h2>
+          <p class="price">₹1,980 /quintal</p>
+          <button class="btn">Buy</button>
+        </div>
+    </div>
+     </div>  
 </body>
 </html>
