--- a/components/store.css
+++ b/components/store.css
@@ -3,7 +3,7 @@ body
     background-image: url(/assets/about_bg.jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+    
     height: 100vh;
     margin: 0;
     font-family: Helvetica; 
@@ -29,4 +29,84 @@ body
     color: #424242;
     transition: background-color 0.3s ease, color 0.3s ease; 
     
+}
+.title
+{
+    background-color: rgb(29, 28, 28);
+    color: #ffffff;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+    font-family: Helvetica;
+    border-color: #000000;
+    border-radius: 20px;
+    width: 250px;
+    height: 50px; 
+}
+
+.seed
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    gap: 20px;
+}
+.price
+{
+    font-size: 20px;
+    font-weight: bold;
+}
+.seed .cards
+{
+    
+    gap: 20px;
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+.cards .c1
+{
+    display:block;
+    background-color : rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    color: #ffffff;
+    width : 350px;
+    height : 350px;
+    margin-top: 30px;
+    border-radius: 20px;
+    padding: 20px 20px;
+    text-align: center;
+    font-family: Helvetica;
+    font-size: 20px;
+    transition: transform 0.2s ease-in-out;
+    cursor: pointer;
+}
+.cards .c1:hover
+{
+    transform: scale(1.05);
+}
+.cards .c1 img
+{
+    width: 200px;
+    height: 160px;
+    border-radius: 10px;
+    object-fit: cover;
+    align-items:center;
+}
+.c1 .btn
+{
+    background-color:rgb(43, 42, 42);
+    color: #ebe3e3;
+    border-radius: 30px;
+    border: none;
+    margin-top: 20px;
+    padding: 10px 30px;
+    font-size: 16px;
+
+}
+.c1 .btn:hover
+{
+    background-color: #ffffff;
+    color: #000000;
 }
