--- a/components/Store.html
+++ b/components/Store.html
@@ -58,14 +58,32 @@
       <div class="title">
         <h1>Fertilizers</h1>
       </div>
+      <div class="fertilizer">
       <div class="cards">
         <div class="c1">
-          <img src="../assets/store/barley-seeds.jpg">
-          <h2>Barley</h2>
-          <p class="price">₹1,980 /quintal</p>
+          <img src="../assets/store/urea.png">
+          <h2>Urea</h2>
+          <p class="price">₹260 /50kg</p>
           <button class="btn">Buy</button>
         </div>
     </div>
+    <div class="cards">
+      <div class="c1">
+        <img src="../assets/store/neem-cake.png">
+        <h2>Neem-Cake</h2>
+        <p class="price">₹260 /50kg</p>
+        <button class="btn">Buy</button>
+      </div>
+  </div>
+  <div class="cards">
+    <div class="c1">
+      <img src="../assets/store/vermi-compost.png">
+      <h2>Vermi-Compost</h2>
+      <p class="price">₹260 /50kg</p>
+      <button class="btn">Buy</button>
+    </div>
+</div>
+</div>
      </div>  
 </body>
 </html>
