--- a/components/Store.html
+++ b/components/Store.html
@@ -71,7 +71,7 @@
       <div class="c1">
         <img src="../assets/store/neem-cake.png">
         <h2>Neem-Cake</h2>
-        <p class="price">₹260 /50kg</p>
+        <p class="price">₹20 – ₹75 per kg</p>
         <button class="btn">Buy</button>
       </div>
   </div>
@@ -79,11 +79,63 @@
     <div class="c1">
       <img src="../assets/store/vermi-compost.png">
       <h2>Vermi-Compost</h2>
-      <p class="price">₹260 /50kg</p>
+      <p class="price"> ₹10 – ₹80 per kg</p>
       <button class="btn">Buy</button>
     </div>
 </div>
+<div class="cards">
+  <div class="c1">
+    <img src="../assets/store/bio-fertilizer.png">
+    <h2>Rhizobium Bio-Fertilizer</h2>
+    <p class="price">₹40 – ₹500 per kg/liter</p>
+    <button class="btn">Buy</button>
+  </div>
+</div>
 </div>
      </div>  
+  <div class="sec3">
+    <div class="title">
+      <h1>Equipments</h1>
+    </div>
+      <div class="farm-inputs">    
+      <div class="cards">
+      <div class="c1">
+        <img src="../assets/store/drip-system.png"">
+        <h2>Drip-system</h2>
+        <p class="price">₹5,300</p>
+        <button class="btn">Buy</button>
+      </div>
+      </div>
+        <div class="cards">
+              <div class="c1">
+                <img src="../assets/store/irigation.png">
+                <h2>Irigation System</h2>
+                <p class="price">₹8,290</p>
+                <button class="btn">Buy</button>
+              </div>
+          </div>
+        <div class="cards">
+            <div class="c1">
+              <img src="../assets/store/solar-pump.png">
+              <h2>Solar Pumps</h2>
+              <p class="price">₹49,000</p>
+              <button class="btn">Buy</button>
+            </div>
+        </div>
+        <div class="cards">
+          <div class="c1">
+            <img src="../assets/equipments/sprayers.png">
+            <h2>Sprayers</h2>
+            <p class="price">₹3000</p>
+            <button class="btn">Buy</button>
+          </div>
+      </div>
+      </div>
+   </div> 
+
+
+
+
+  </div>
 </body>
 </html>
