--- a/components/Service.html
+++ b/components/Service.html
@@ -8,7 +8,7 @@
     <link rel="script" href="scripts.js">
 </head>
 <body>
-    <header>
+    
         <div class="navbar">
           <a href ="../index.html">Home</a>
           <a href ="About.html">About</a>
@@ -16,8 +16,8 @@
           <a href ="Store.html">Store</a>
           <a href ="Login.html">Login</a>  
         </div>
-      </header>
-      <section class="sec1">
+  
+      <div class="sec1">
       <div class="weather-forecast">
         <h2> Weather-Forecast</h2>
     </div>
@@ -54,8 +54,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <section class="sec2">
+    </div>
+    <div class="sec2">
    <div class="insurance">
     <div class="card2">
     <div class="farmers-insurance">
@@ -112,11 +112,12 @@
       <button class="insurance-button">Register Now </button>
     </div>
    </div>
-    </section>
-  <section class="sec3">
+    </div>
+  </div>
+  <div class="sec3">
     <div class="rent-equipment">
       <div class="title">
-        <h2>Equipment Rental Marketplace</h2>
+        <h2>Equipment Rental</h2>
       </div>
       <div class="cards">
         <div class="c1">
@@ -157,11 +158,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
   
-  <section class="sec4">
+  <div class="sec4">
     <div class="title">
-      <h2>Expert consultation on Agronomists and Veterinarians </h2>
+      <h2>Expert consultation</h2>
     </div>
     <div class="Agromists-Veterinarians">
       
@@ -194,7 +195,8 @@
           <button class="btn">Book now</button>
         </div>
         </div>
-      </section>  
+      </div>  
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
