--- a/components/Service.css
+++ b/components/Service.css
@@ -2,15 +2,15 @@
 {
     margin: 0;
     padding: 0;
+    
 }
 body
 {
-    background-image: url(../assets/background.jpg);
+    background-image: url(../assets/about_bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
-    margin: 0;
+    
 }
 
 .navbar
@@ -35,13 +35,7 @@ body
     transition: background-color 0.3s ease, color 0.3s ease; 
     
 }
-.sec1
-{
-    height: 100vh;
-}
-.sec2{
-    height: 100vh;
-}
+
 .title
 {
     text-align: center;
@@ -96,7 +90,7 @@ body
 .weather-icon
 {
     width: 170px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .weather
@@ -132,7 +126,7 @@ body
     margin-right: 10px;
 
 }
-.humidity, .wind
+.humidity .wind
 {
     font-size: 25px;
     margin-top: 6px;
@@ -157,7 +151,6 @@ body
 .insurance
 {
     display: flex;
-    background-image: url(../assets/background4.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -208,7 +201,7 @@ body
     max-width: 400px;
     color: #000000;
     background-color: white;
-    margin: 45px auto 0;
+    margin: 15px auto 0;
     margin-top: 150px;
     border-radius: 20px;
     padding: 30px 25px;
@@ -219,11 +212,7 @@ body
 {
     height: 100vh;
     font-family: Helvetica;
-    background-image: url(../assets/background5.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-
+    
     
 }
 .rent-equipment
@@ -234,10 +223,15 @@ body
 .rent-equipment .title
 {
     color: #fffafa;
+    background-color: black;
+    padding: 5x;
+    border-radius: 20px;
+    width: 400px;
+    height: 60px;
+    font-weight: 600;
     text-align: center;
-    margin-top: 10px;
-    margin-left: 70px;
-    font-size: 20px;
+    margin-top: 5px;
+    font-size: 30px;
 }
 .cards
 {
@@ -297,7 +291,7 @@ body
 }
 .sec4
 {
-    background-image: url(../assets/background6.jpg);
+    
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -307,16 +301,22 @@ body
 .sec4 .title
 {
 
-    color: #000000;
+    color: #ffffff;
+    background-color: black;
+    padding: 5x;
+    border-radius: 20px;
+    width: 400px;
+    height: 60px;
     font-weight: 600;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 80px;
     font-size: 30px;
+    margin-left: 100px;
 }
 .Agromists-Veterinarians
 {
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
     border-radius: 20px;
     margin: 20px auto auto;
     width: 90%;
