--- a/components/Login.html
+++ b/components/Login.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login & Sign Up</title>
-  <link rel="stylesheet" href="login.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../components/login.css">
+    <title>Login | Agro-Tech</title>
 </head>
 <body>
-<header>
-    <div class="navbar">
-      <a href ="../index.html">Home</a>
-      <a href ="About.html">About</a>
-      <a href ="Service.html">Service</a>
-      <a href ="Store.html">Store</a>
-      <a href ="Login.html">Login</a>  
+  <div class="navbar">
+    <a href ="../index.html">Home</a>
+    <a href ="About.html">About</a>
+    <a href ="Service.html">Service</a>
+    <a href ="Store.html">Store</a>
+    <a href ="Login.html">Login</a>  
+  </div>
+    <div class="login-box">
+        <div class="login-header">
+            <header>Login</header>
+        </div>
+        <div class="input-box">
+            <input type="text" class="input-field" placeholder="Email" autocomplete="off" required>
+        </div>
+        <div class="input-box">
+            <input type="password" class="input-field" placeholder="Password" autocomplete="off" required>
+        </div>
+        <div class="forgot">
+            <section>
+                <input type="checkbox" id="check">
+                <label for="check">Remember me</label>
+            </section>
+            <section>
+                <a href="#">Forgot password</a>
+            </section>
+        </div>
+        <div class="input-submit">
+            <button class="submit-btn" id="submit"></button>
+            <label for="submit">Log In</label>
+        </div>
+        <div class="sign-up-link">
+            <p>Don't have account? <a href="./signin.html">Sign Up</a></p>
+        </div>
     </div>
-  </header>
-<section class="sec1">
-
-</section>
 </body>
 </html>
